--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>PEEPOOP THE DOG</title>
     <link rel="stylesheet" href="/dist/css/style.css">
 </head>
-<body>
+<body id="documentBody">
     <div class="container">
         <h1>Hello it is Peepoop</h1>
     </div>
