--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <title>PEEPOOP THE DOG</title>
     <link rel="stylesheet" href="/dist/css/style.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+
 </head>
 <body id="documentBody">
     <div class="container">
         <h1>Hello it is Peepoop</h1>
     </div>
-    <script src="/dist/js/scripts.min.js"></script>
+    <script type="module" src="/dist/js/scripts.min.js"></script>
 </body>
 </html>
